// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Svg renders a menu icon with float property 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  float: left;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with no size 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #ffffff;
  color: #ffffff;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with specified size and color 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #ffffff;
  color: #ffffff;
  width: 16px;
  height: 16px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with specified size and default color 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;
